...

  static const _items = [
    AppNavItem(icon: Symbols.home, label: 'Accueil'),
    AppNavItem(icon: Symbols.inventory_2, label: 'Produits'),
    AppNavItem(icon: Symbols.receipt_long, label: 'Commandes'),
    AppNavItem(icon: Symbols.chat_bubble, label: 'Messages'),
    AppNavItem(icon: Symbols.person, label: 'Profil'),
  ];

  int get _currentIndex {
    if (location.startsWith('/producer/home')) return 0;
    if (location.startsWith('/producer/products') ||
        location.startsWith('/producer/inventory') ||
...
